--- a/styles/10-calculator-style.css
+++ b/styles/10-calculator-style.css
@@ -3,11 +3,19 @@ body {
   font-family: Arial;
 }
 
+.calculator {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-left: 5px;
+}
+
 .js-calculation {
   color: white;
   font-size: 45px;
   margin-top: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
+  margin-left: 10px;
 }
 
 .number,
@@ -18,8 +26,8 @@ body {
   height: 60px;
   border-radius: 100px;
   font-size: 26px;
-  margin-left: 2px;
-  margin-top: 2px;
+  margin-top: -14px;
+  margin-left: 4px;
 }
 
 .orange-sign {
